# face_detect

./: CMakeLists.txt  README.md
include/: library.h
lib/: libfdetectlib.so.1.0.1
src/: CMakeLists.txt  library.cpp
src/application/: CMakeLists.txt
src/execute/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/face_detect/: CMakeLists.txt  face_detect.cpp  face_detect.hpp
src/image_processing/: CMakeLists.txt  image_processing.cpp  image_processing.hpp
